<resources>
    <string name="app_name">PushMsg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_favorite">My Star</string>
    <string name="all_record">All Record</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password_hint">Password(more than 6）</string>
    <string name="user_name">User name</string>
    <string name="logout">Logout</string>
</resources>
