<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_folder"
            android:title="@string/all_record" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star"
            android:title="@string/my_favorite" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app"
        android:title="@string/logout" />


</menu>
